--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -9,13 +9,14 @@
   <h1>Space Invaders</h1>
   <div id="game">
     <div id="player"></div>
-    <div id="shields"></div>
+    
     <div id="enemies"></div>
     <div id="bullets"></div>
   </div>
   <div id="info">
-    <p>Score: <span id="score">0</span> | Lives: <span id="lives">3</span></p>
+    <p>Score: <span id="score">0</span> | Lifes: <span id="lives">3</span></p>
     <p id="gameOverText" class="hidden">Game Over!</p>
+    <p id="winText" class="hidden">YOU WIN!</p>
   </div>
   <script src="game.js"></script>
 </body>
