wip in the space invaders

--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -14,7 +14,7 @@
     <div id="bullets"></div>
   </div>
   <div id="info">
-    <p>Score: <span id="score">0</span> | Lifes: <span id="lives">3</span></p>
+    <p>Score: <span id="score">0</span> | Lifes: <span id="lifes">3</span></p>
     <p id="gameOverText" class="hidden">Game Over!</p>
     <p id="winText" class="hidden">YOU WIN!</p>
   </div>
